# on-time-flights-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  jobs.py  pyproject.toml  test_jobs.py  test_worker.py  worker.py
backend/data/sample/: training_subset.csv
backend/src/: FastAPI_api.py  app.py  db_wrapper.py  jobs.py  worker.py
backend/test/: test_app.py
data/: small_sample_data.csv
data/sample/: training_subset.parquet
frontend/: README.md  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnalysisJobPanel.tsx  DataControls.tsx  DelayBreakdown.tsx  DelayMap.tsx  FilterPanel.tsx  FlightTable.tsx  SummaryCards.tsx
frontend/src/lib/: airportLocations.ts  api.ts  flightAnalytics.test.ts  flightAnalytics.ts  types.ts
kubernetes/prod/: app-prod-deployment-redis.yml  app-prod-deployment-worker.yml
kubernetes/test/: app-test-deployment-FastAPI.yml  app-test-deployment-worker.yml  app-test-ingress-FastAPI.yml  app-test-pvc-redis.yml  app-test-service-FastAPI.yml  app-test-service-redis.yml
src/: app.py
utils/: generate_parquet.py  pyproject.toml
