[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ComputationalConnor", email = "connorfeng2006@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "argparse>=1.4.0",
    "fastapi[standard]>=0.134.0",
    "pydantic>=2.12.5",
    "redis>=7.4.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
