[project]
name = "on-time-flights-analysis-backend"
version = "0.1.0"
description = "All backend code for the on-time flights analysis project."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.134.0",
    "hotqueue>=0.2.8",
    "pydantic>=2.12.5",
    "redis>=7.4.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
